move configuration from root project to :findbugs project